# linux_design

./: .env  .gitignore  Cargo.toml  Readme.md
1_linux_synchronization_mechanism/: readme.md
2_introduction_to_operating_systems/: Readme.md
3_linux_phiosophy_for_sysadmins/: readme.md
4_core_utilities/: readme.md
5_data_streams/: readme.md
5_data_streams/balance/: Cargo.toml
5_data_streams/balance/src/: main.rs
Using_the_linux_command_line/: readme.md
ex/cli/: Cargo.toml
ex/cli/src/: main.rs
ex/command_line/src/: main.rs
ex/cs196/: cs196.md
ex/fit/: Cargo.toml
ex/fit/data/: HRSz0yd020fm_c2f.fits.part
ex/fit/src/: main.rs
ex/grpc_ex/: Cargo.toml  build.rs  foobar.proto
ex/os_ex/: Cargo.toml  readme.md
ex/os_ex/src/: lib.rs  main.rs  vga_buffer.rs
ex/os_ex/tests/: basic_boot.rs  should_panic.rs
ex/ray_tracer/: Cargo.toml
ex/ray_tracer/src/: main.rs  vec3.rs
ex/stream/: Cargo.toml
ex/stream/src/: main.rs
ex/stream_cli/: Cargo.toml
master/: readme.md
src/: main.rs
