[package]
name = "linux_design"
version = "0.1.0"
authors = ["teng <wwwsousoucom@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.5.0", features = ["attributes", "unstable"]}
tide = "0.8.1"
sqlx = { version = "0.3.5", features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid"]}
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
chrono = "0.4.11"
log = "0.4.8"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
uuid = "0.8.1"
