[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"

[package]
name = "os_ex"
version = "0.1.0"
authors = ["teng <wwwsousoucom@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.3"